try fixing red scrollbar issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,11 +60,11 @@ table {
     width: 0.5vw;
 }
 ::-webkit-scrollbar-thumb{
-    background-color: red;
+    background: red;
 }
-::-webkit-scrollbar-thumb:hover{
+/* ::-webkit-scrollbar-thumb:hover{
     background-color: red;
-}
+} */
 /* End of Scrollbar */
 
 /* Start of Navbar */
